[gd_scene load_steps=6 format=2]

[ext_resource path="res://1.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Menu/NewGameMenu/NewGameMenu.gd" type="Script" id=2]
[ext_resource path="res://Objects/NumberKeyboard/NumberKeyboard.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Menu/PlayersMenu/PlayerSelector/PlayerSelector.tscn" type="PackedScene" id=4]
[ext_resource path="res://Font/64.tres" type="DynamicFont" id=5]

[node name="NewGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -130.0
margin_top = -134.0
margin_right = 882.0
margin_bottom = 1672.0
focus_mode = 1
color = Color( 0.133333, 0.184314, 0.243137, 1 )

[node name="Back" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -242.0
margin_top = 45.0
margin_right = -100.0
margin_bottom = 90.0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -276.0
margin_right = 76.0
margin_bottom = -229.0
text = "Players"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.0
margin_top = -546.0
margin_right = 194.0
margin_bottom = -456.0
custom_fonts/font = ExtResource( 5 )
text = "Start Game"

[node name="NumberKeyboard" parent="." instance=ExtResource( 3 )]
margin_top = 1482.0
margin_bottom = 486.0
not_node_path = true

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.0
margin_right = 206.0
margin_bottom = 191.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxScoreCheckBox" type="CheckBox" parent="GridContainer"]
margin_top = 23.0
margin_right = 207.0
margin_bottom = 70.0
size_flags_horizontal = 6
size_flags_vertical = 6
pressed = true
text = "Max Score"

[node name="MaxScore" type="LineEdit" parent="GridContainer"]
margin_left = 250.0
margin_top = 23.0
margin_right = 368.0
margin_bottom = 70.0
size_flags_horizontal = 6
size_flags_vertical = 6
max_length = 6
virtual_keyboard_enabled = false
placeholder_text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundsCheckBox" type="CheckBox" parent="GridContainer"]
margin_left = 25.0
margin_top = 121.0
margin_right = 181.0
margin_bottom = 168.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Rounds"

[node name="Rounds" type="LineEdit" parent="GridContainer"]
margin_left = 250.0
margin_top = 121.0
margin_right = 368.0
margin_bottom = 168.0
size_flags_horizontal = 6
size_flags_vertical = 6
max_length = 6
editable = false
virtual_keyboard_enabled = false
placeholder_text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSelector" parent="." instance=ExtResource( 4 )]
visible = false

[node name="EnterMaxOrRoundsPopup" type="AcceptDialog" parent="."]
margin_left = 87.0
margin_top = 533.0
margin_right = 617.0
margin_bottom = 707.0
rect_min_size = Vector2( 530, 174 )
theme = ExtResource( 1 )
window_title = "Error"
dialog_text = "Please enter a Max Score or how many rounds you want!"
dialog_autowrap = true

[node name="EnterPlayersPopup" type="AcceptDialog" parent="."]
margin_left = 87.0
margin_top = 533.0
margin_right = 617.0
margin_bottom = 707.0
rect_min_size = Vector2( 530, 174 )
theme = ExtResource( 1 )
window_title = "Error"
dialog_text = "Please choose players for game"
dialog_autowrap = true

[connection signal="focus_entered" from="ColorRect" to="." method="_on_ColorRect_focus_entered"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Players" to="." method="_on_Players_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="toggled" from="GridContainer/MaxScoreCheckBox" to="." method="_on_MaxScoreCheckBox_toggled"]
[connection signal="focus_entered" from="GridContainer/MaxScore" to="." method="_on_MaxScore_focus_entered"]
[connection signal="toggled" from="GridContainer/RoundsCheckBox" to="." method="_on_RoundsCheckBox_toggled"]
[connection signal="focus_entered" from="GridContainer/Rounds" to="." method="_on_Rounds_focus_entered"]
